# alpy

./: .gitignore  .pre-commit-config.yaml  index.html  pyproject.toml
alpy/: environemt_setup.py  function_no_return.py  helloworld.md  helloworld.py  intro.py  notes.txt  numbers.py  strings.py  test_helloworld.py  test_intro.py  testing.py
css/: style.css
ide/: index.html
js/: codemirror-setup.js  io.js  markdown-setup.js  pyodide-setup.js
src/: __init__.py  helloworld.py
