[project]
name = "alpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "pre-commit"
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
target-version = "py314"
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PT"]

[tool.ruff.lint.per-file-ignores]
"src/helloworld.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
